add option in gradle to enable java preview features